# GANOS

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile.bak  README.md  configure.sh  env.sh  make.mg  make.tc  make.tc.native  makefile  tools.mk
boot/: CMakeLists.txt  Makefile  README.md  make.mg
boot/i386/: .boot0.asm.swp  CMakeLists.txt  Makefile  README.md  \  boot.asm  boot0.asm  boot1.asm  boot_a.asm  boot_c.c  bootld.asm  floppy.img  make.mg  pmbr.s
boot/i386/efi/: Makefile  efildr.c
boot/i386/floppy/: Makefile
boot/i386/gptboot/: Makefile
boot/i386/mbr/: Makefile
boot/i386/pmbr/: CMakeLists.txt  Makefile  make.mg  pmbr.s
boot/i386/src/: pmbr.s
boot/i386_fat/: Makefile  boot0.asm  boot0.lst  boot1.asm  boot1.asm.bak  boot1.c  boot1.lst  boot1.s  boot2.c  bootld.s  efi.asm  gpt_example  gpt_header.asm  hello.asm  pmbr.s  video.h  windows_gpt
boot/i386_fat.old/: Makefile  boot1.asm  boot2.c  smbios.h
boot/i386_gas/: .boot0.S.swp  Makefile  boot0.S  boot1.S
boot/powerpc/: Makefile
boot/x86/: CMakeLists.txt  Makefile
boot/x86/bootld/: bootld.s  debug.gdb  makefile  mkimg.sh  test.sh
boot/x86/bootld/kern/: entry.c  kern  makefile
boot/x86/bootld/minikern/: entry.c  makefile
boot/x86/efi/: Makefile  efildr.c
boot/x86/efildr/: CMakeLists.txt
boot/x86/efildr/src/: efildr.c
boot/x86/floppy/: bootsec.s  debug.gdb  makefile  mkimg.sh  test.sh
boot/x86/gptboot/: CMakeLists.txt  Makefile  link.ld
boot/x86/mbr/: CMakeLists.txt  debug.gdb  link.ld  makefile  mbr.s
boot/x86/pmbr/: CMakeLists.txt  link.ld  makefile  pmbr.s
boot/x86/pmbr.bak/: CMakeLists.txt
boot/x86/pmbr.bak/src/: pmbr.s
boot/x86/src/: gptboot.s  pmbr.s
boot/x86/vbr/: debug.gdb  makefile  test.sh  vbr.S  vbr.fat.S  vbr.s
cmake/: alix-common.cmake  test.cmake  test3.cmake
cmake/Modules/: AddTargetAlixLibrary.cmake  SetCStdlib.cmake
cmake/Platform/: ALiX.cmake
cmake/ToolChains/: alix-i386.cmake  external.cmake  test2.cmake  test3.cmake
cmake/include/: CheckAndAddType.cmake  SetCStdlib.cmake
include/: unistd.h
include/EFI/: efi-ct.h  efi-rs.h  efi-st.h
include/EFI/protocol/: efi-stip.h
include/ganix/video/: tms9900.h  vga.h  video.h
include/sys/: _null.h  types.h
include/video/: tms9900.h  vga.h
include/x86/sys/: _types.h
lib/: CMakeLists.txt  make.mg
lib/efi/: CMakeLists.txt
lib/efi/include/EFI/: efi-bs.h  efi-types.h  efi.h
lib/efi/include/EFI/protocol/: efi-stop.h
lib/libc/: CMakeLists.txt  make.mg
lib/libc/include/: math.h  stdio.h  test.h.in  tgmath.h  unistd.h
lib/libc/include/sys/: _null.h
lib/libc/stdio/: getline.c
lib/libc/unistd/: exit.c
lib/libxnet/: CMakeLists.txt
lib/libxnet/include/: netdb.h
lib/libxnet/include/arpa/: inet.h
lib/libxnet/include/sys/: inet.h
libexec/: CMakeLists.txt
libexec/ld-elf/: CMakeLists.txt
libexec/ld-elf/src/: main.c
mkimg/: common.env
mkimg/i386/: platform.env
mkimg/i386/gpt/: mkimg.sh
sys/: CMakeLists.txt  Makefile
sys/6809/: tms9900.c
sys/boot/i386/: Makefile  boot.asm
sys/dev/video/: video.c
sys/dev/video/tms9900/: tms9900.c
sys/kern/: CMakeLists.txt  kern_main.c
sys/kern/efi/: bootstrap.c
sys/kern/include/alix/: copyright.h  version.h
sys/kern/include/platform/: early_console.h  info.h.in  init.h
sys/kern/include/platform/x86/: multiboot.h
sys/kern/include/sys/: system.h
sys/kern/multiboot/: bootstrap.s  link.ld  setup.c
sys/kern/src/: kern_main.c  kern_main.c.bak
sys/kern/src/x86/: boot_info.h  early_console.c  init.c
tools/: Makefile
tools.bak/configurator/: .gitignore  Makefile  configure.c  str_to_c_array.py
tools.bak/fat_reader/: .gitignore  Makefile
tools.bak/gdt_creator/: gdt_creator.c
tools/alix-install/: alix-install  main.c  makefile  partman.c  partman.h
tools/configurator/: Makefile  configure  configure.c  str_to_c_array.py
tools/fat_reader/: fat_reader  fat_reader.c  test.sh
tools/makegen/: makegen.sh
tools/makegen/example/: CMakeLists.txt  make.mg
tools/makegen/example/src/: main.c  test.c  test.h
tools/mkimg/: main.c  makefile
usr.bin/: CMakeLists.txt  Makefile
usr.bin/make/: CMakeLists.txt  Makefile
usr.bin/pwd/: CMakeLists.txt  Makefile
usr.bin/uname/: CMakeLists.txt  Makefile  main.c
